@@ -99,7 +99,8 @@ OBJECTS_TREE = {'functions': sorted(['pa_count_devices', 'pa_get_default_input',
                                                      'FourBand', 'Biquada', 'Atone', 'SVF', 'Average', 'Reson', 'Resonx', 'ButLP',
                                                      'ButHP', 'ButBP', 'ButBR', 'ComplexRes', 'MoogLP']),
                                   'generators': sorted(['Noise', 'Phasor', 'Sine', 'Input', 'FM', 'SineLoop', 'Blit', 'PinkNoise', 'CrossFM',
-                                                        'BrownNoise', 'Rossler', 'Lorenz', 'ChenLee', 'LFO', 'SumOsc', 'SuperSaw', 'RCOsc']),
+                                                        'BrownNoise', 'Rossler', 'Lorenz', 'ChenLee', 'LFO', 'SumOsc', 'SuperSaw', 'RCOsc',
+                                                        'FastSine']),
                                   'internals': sorted(['Dummy', 'InputFader', 'Mix', 'VarPort']),
                                   'midi': sorted(['Midictl', 'CtlScan', 'CtlScan2', 'Notein', 'MidiAdsr', 'MidiDelAdsr', 'Bendin',
                                                   'Touchin', 'Programin', 'RawMidi']),
