@@ -1,3 +1,7 @@
+2016-03-28 belangeo <belangeo@gmail.com>
+
+    *  Added new object: FastSine, two fast sin approximations (faster than linear table lookup).
+
 2016-03-27 belangeo <belangeo@gmail.com>
 
     *  Added new function : getPyoKeywords, returns the list of pyo keywords (classes and functions).
